gccida/g0/recog_24
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31209:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31210:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31213:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31220:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2ba; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31222:23: error: use of undeclared identifier 'recog_data_0'
&& ( unsigned __int16)recog_data_0.operand[2]->fld[0].rtwint != 0x8000LL ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31240:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31247:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2bb; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31248:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2bc = ( rtx)x1m[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31251:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x2bc->fld[0].rtx, recog_data_0.operand[1]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31252:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)&x2bc[1], recog_data_0.operand[2]) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31254:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !ix86_binary_operator_ok( MINUS, HImode, recog_data_0.operand) ) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31264:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31265:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = (  struct rtx_def *)x3[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31268:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31269:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3b = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31279:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31280:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2b = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31283:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x2b->fld[0].rtx, recog_data_0.operand[1]) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/insn-recog.c:31284:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)&x2b[1], recog_data_0.operand[2]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_24/src/obj/insn-recog.o] Error 1
